# murmur

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REAME.md
.github/workflows/: release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/chat-core/: Cargo.toml
crates/chat-core/src/: lib.rs
crates/chat-protocol/: Cargo.toml
crates/chat-protocol/src/: lib.rs
