[workspace]
resolver = "2"
members = [
    "apps/*",
    "crates/*"
]

# This ensures all crates use the exact same versions of these heavy dependencies
[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
libp2p = { version = "0.56.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6" }

